F&GDEV/src/objects/Trademarks__c.object
<CustomObject>
    <fields>
        <fullName>Class__c</fullName>
        <inlineHelpText>What is the class description listed on the certificate?</inlineHelpText>
        <label>Class</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Continued_Use_End_Date__c</fullName>
        <label>Continued Use End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Continued_Use_Start_Date__c</fullName>
        <label>Continued Use Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Filed__c</fullName>
        <label>Date Filed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Use__c</fullName>
        <inlineHelpText>What is the first use and in commerce date found on the certificate?</inlineHelpText>
        <label>First Use</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marketing_Name__c</fullName>
        <label>Marketing Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Type_c__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accelerator Plus</fullName>
                </value>
                <value>
                    <fullName>FG AccumulatorPlus</fullName>
                </value>
                <value>
                    <fullName>FG Guarantee-Platinum</fullName>
                </value>
                <value>
                    <fullName>FG Immediate-Income</fullName>
                </value>
                <value>
                    <fullName>FG Index-Choice 0</fullName>
                </value>
                <value>
                    <fullName>FG Retirement Pro</fullName>
                </value>
                <value>
                    <fullName>FGNY Index-Choice 10</fullName>
                </value>
                <value>
                    <fullName>Performance Pro</fullName>
                </value>
                <value>
                    <fullName>Prosperity Elite</fullName>
                </value>
                <value>
                    <fullName>Safe Income Plus</fullName>
                </value>
                <value>
                    <fullName>FG Life-Choice</fullName>
                </value>
                <value>
                    <fullName>FG Life-Elite</fullName>
                </value>
                <value>
                    <fullName>Synergy Global Advantage Freedom</fullName>
                </value>
                <value>
                    <fullName>Synergy Global Advantage Gold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_of_Reg_No__c</fullName>
        <label>Owner of Reg. No.</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Principal_Register__c</fullName>
        <label>Principal Register</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Type_c__c</fullName>
        <label>Product_Type__c</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Registration_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annuity</fullName>
                </value>
                <value>
                    <fullName>Life</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_Issued__c</fullName>
        <label>Registration Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_Type__c</fullName>
        <label>Registration Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Logo</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_End_Date__c</fullName>
        <label>Renewal End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Start_Date__c</fullName>
        <label>Renewal Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Text_Serial_Number__c</fullName>
        <formula>Serial_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Text Serial Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Trademark</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Trademark Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trademarks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>